make consistent use of script name
Signed-off-by: Gunjan Gupta <gunjan@wesion.com>

--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -773,7 +773,7 @@
                 },
                 {
                     "id": "SW20",
-                    "description": "SWystem benchmaking and diagnostics",
+                    "description": "System benchmaking and diagnostics",
                     "command": [
                         "see_monitoring"
                     ],
