--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -355,6 +355,17 @@
                     "src_reference": "",
                     "author": "Gunjan Gupta",
                     "condition": "[ -e /usr/local/bin/fan.sh ] && [ -e /sys/class/fan/mode ]  && [ -e /sys/class/fan/level ]"
+                },
+                {
+                    "id": "S12",
+                    "description": "Manage device tree overlays",
+                    "command": [
+                        "manage_dtoverlays"
+                    ],
+                    "status": "Active",
+                    "doc_link": "",
+                    "src_reference": "",
+                    "author": "Gunjan Gupta"
                 }
             ]
         },
