--- a/lib/fenix-config/config.ng.jobs.json
+++ b/lib/fenix-config/config.ng.jobs.json
@@ -407,181 +407,7 @@
       "sub": [
         {
           "id": "N01",
-          "description": "Configure network interfaces using Netplan",
-          "sub": [
-            {
-              "id": "N0101",
-              "description": "Wired",
-              "sub": [
-                {
-                  "id": "N010101",
-                  "description": "Show configuration",
-                  "command": [
-                    "netplan_wrapper \"show_message\" \"\" \"\" \"ethernets\""
-                  ],
-                  "status": "Active",
-                  "doc_link": "",
-                  "src_reference": "",
-                  "author": "Igor Pecovnik",
-                  "condition": "[ -f /etc/netplan/30-*static-interfaces.yaml ] || [ -f /etc/netplan/10-dhcp-all-interfaces.yaml ]"
-                },
-                {
-                  "id": "N010102",
-                  "description": "Enable DHCP on all interfaces",
-                  "command": [
-                    "netplan_wrapper \"dhcp_all_wired_interfaces\" \"false\" \"10-dhcp-all-interfaces\" \"ethernets\" \"networkd\""
-                  ],
-                  "status": "Active",
-                  "author": "Igor Pecovnik",
-                  "condition": "[ ! -f /etc/netplan/10-dhcp-all-interfaces.yaml ]"
-                },
-                {
-                  "id": "N010103",
-                  "description": "Set fixed IP address",
-                  "command": [
-                    " netplan_wrapper \"set_ip\" \"true\" \"10-dhcp-all-interfaces\" \"ethernets\" \"networkd\""
-                  ],
-                  "status": "Active",
-                  "doc_link": "",
-                  "src_reference": "",
-                  "author": "Igor Pecovnik",
-                  "condition": ""
-                },
-                {
-                  "id": "N010104",
-                  "description": "Disable IPV6",
-                  "command": [
-                    " netplan_wrapper \"disable_ipv6\" \"false\" \"10-dhcp-all-interfaces\" \"ethernets\" \"networkd\""
-                  ],
-                  "status": "Pending Review",
-                  "doc_link": "",
-                  "src_reference": "",
-                  "author": "Igor Pecovnik",
-                  "condition": "[ -f /etc/netplan/30-*static-interfaces.yaml ] || [ -f /etc/netplan/10-dhcp-all-interfaces.yaml ]"
-                },
-                {
-                  "id": "N010105",
-                  "description": "Enable IPV6",
-                  "command": [
-                    " netplan_wrapper \"enable_ipv6\" \"false\" \"10-dhcp-all-interfaces\" \"ethernets\" \"networkd\""
-                  ],
-                  "status": "Pending Review",
-                  "doc_link": "",
-                  "src_reference": "",
-                  "author": "Igor Pecovnik",
-                  "condition": "[ -f /etc/netplan/30-*static-interfaces.yaml ] || [ -f /etc/netplan/10-dhcp-all-interfaces.yaml ]"
-                },
-                {
-                  "id": "N010106",
-                  "description": "Disable wired networking",
-                  "command": [
-                    "rm -f /etc/netplan/10-dhcp-all-interfaces.yaml /etc/netplan/30-*static-interfaces.yaml"
-                  ],
-                  "condition": "[ -f /etc/netplan/30-*static-interfaces.yaml ] || [ -f /etc/netplan/10-dhcp-all-interfaces.yaml ]",
-                  "status": "Active",
-                  "author": "Igor Pecovnik"
-                }
-              ]
-            },
-            {
-              "id": "N0102",
-              "description": "Wireless",
-              "sub": [
-                {
-                  "id": "N010201",
-                  "description": "Show configuration",
-                  "command": [
-                    "netplan_wrapper \"show_message\" \"\" \"\" \"wifis\""
-                  ],
-                  "condition": "[ -f /etc/netplan/20-dhcp-wlan-interface.yaml ]",
-                  "status": "Active",
-                  "author": "Igor Pecovnik"
-                },
-                {
-                  "id": "N010202",
-                  "description": "Disable wireless networking",
-                  "command": [
-                    "rm -f /etc/netplan/20-dhcp-wlan-interface.yaml"
-                  ],
-                  "condition": "[ -f /etc/netplan/20-dhcp-wlan-interface.yaml ]",
-                  "status": "Active",
-                  "author": "Igor Pecovnik"
-                },
-                {
-                  "id": "N010203",
-                  "description": "Disable IPV6",
-                  "command": [
-                    " netplan_wrapper \"disable_ipv6\" \"false\" \"20-dhcp-wlan-interface\" \"wifis\" \"networkd\""
-                  ],
-                  "condition": "[ -f /etc/netplan/20-dhcp-wlan-interface.yaml ]",
-                  "status": "Active",
-                  "author": "Igor Pecovnik"
-                },
-                {
-                  "id": "N010204",
-                  "description": "Enable IPV6",
-                  "command": [
-                    " netplan_wrapper \"enable_ipv6\" \"false\" \"20-dhcp-wlan-interface\" \"wifis\" \"networkd\""
-                  ],
-                  "condition": "[ -f /etc/netplan/20-dhcp-wlan-interface.yaml ]",
-                  "status": "Active",
-                  "author": "Igor Pecovnik"
-                },
-                {
-                  "id": "N010205",
-                  "description": "Enable DHCP on wireless network interface",
-                  "command": [
-                    "wifi_connect"
-                  ],
-                  "status": "Active",
-                  "author": "Igor Pecovnik",
-                  "condition": "[ ! -f /etc/netplan/20-dhcp-wlan-interface.yaml ]"
-                }
-              ]
-            },
-            {
-              "id": "N0103",
-              "description": "Show common configs",
-              "command": [
-                "show_message <<< \"$(sudo netplan get all)\""
-              ],
-              "status": "Active",
-              "doc_link": "",
-              "src_reference": "",
-              "author": "Igor Pecovnik",
-              "condition": ""
-            },
-            {
-              "id": "N0104",
-              "description": "Apply common configs",
-              "prompt": "This will apply new network configuration\n\nwould you like to continue?",
-              "command": [
-                "netplan apply"
-              ],
-              "status": "Active",
-              "doc_link": "",
-              "src_reference": "",
-              "author": "Igor Pecovnik",
-              "condition": ""
-            },
-            {
-              "id": "N0105",
-              "description": "Display status",
-              "command": [
-                "show_message <<< \"$(netplan status --all)\""
-              ],
-              "status": "Active",
-              "doc_link": "",
-              "src_reference": "",
-              "author": "Igor Pecovnik",
-              "condition": "[ $(netplan get network.renderer) == networkd ]"
-            }
-          ],
-          "condition": "check_if_installed netplan.io"
-        },
-        {
-          "id": "N02",
-          "description": "Configure network interfaces using NetworkManager",
+          "description": "Configure network interfaces",
           "command": [
             "nmtui-connect"
           ],
@@ -592,7 +418,7 @@
           "condition": "check_if_installed network-manager && ! check_if_installed netplan.io"
         },
         {
-          "id": "N03",
+          "id": "N02",
           "description": "Install Bluetooth support",
           "command": [
             "see_current_apt ",
@@ -606,7 +432,7 @@
           "condition": "! check_if_installed bluetooth && ! check_if_installed bluez && ! check_if_installed bluez-tools"
         },
         {
-          "id": "N04",
+          "id": "N03",
           "description": "Remove Bluetooth support",
           "command": [
             "see_current_apt ",
@@ -621,7 +447,7 @@
           "condition": "check_if_installed bluetooth || check_if_installed bluez || check_if_installed bluez-tools"
         },
         {
-          "id": "N05",
+          "id": "N04",
           "description": "Bluetooth Discover",
           "prompt": "This will enable bluetooth and discover devices\n\nWould you like to continue?",
           "command": [
@@ -634,7 +460,7 @@
           "condition": "check_if_installed bluetooth || check_if_installed bluez || check_if_installed bluez-tools"
         },
         {
-          "id": "N06",
+          "id": "N05",
           "description": "Toggle system IPv6/IPv4 internet protocol",
           "prompt": "This will toggle your internet protocol\nWould you like to continue?",
           "command": [
