--- a/lib/fenix-config/config.ng.jobs.json
+++ b/lib/fenix-config/config.ng.jobs.json
@@ -593,8 +593,8 @@
             {
               "id": "SW0201",
               "description": "Install realtime console network usage monitor (nload)",
+              "prompt": "This operation will install nload.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will install nload.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y install nload"
               ],
               "status": "Active",
@@ -606,8 +606,8 @@
             {
               "id": "SW0202",
               "description": "Remove realtime console network usage monitor (nload)",
+              "prompt": "This operation will purge nload.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will purge nload.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y purge nload"
               ],
               "status": "Active",
@@ -619,8 +619,8 @@
             {
               "id": "SW0203",
               "description": "Install bandwidth measuring tool (iperf3)",
+              "prompt": "This operation will install iperf3.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will install iperf3.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y install iperf3"
               ],
               "status": "Active",
@@ -632,8 +632,8 @@
             {
               "id": "SW0204",
               "description": "Remove bandwidth measuring tool (iperf3)",
+              "prompt": "This operation will purge iperf3.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will purge iperf3.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y purge iperf3"
               ],
               "status": "Active",
@@ -645,8 +645,8 @@
             {
               "id": "SW0205",
               "description": "Install IP LAN monitor (iptraf-ng)",
+              "prompt": "This operation will install iptraf-ng.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will install iptraf-ng.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y install iptraf-ng"
               ],
               "status": "Active",
@@ -658,8 +658,8 @@
             {
               "id": "SW0206",
               "description": "Remove IP LAN monitor (iptraf-ng)",
+              "prompt": "This operation will purge nload.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will purge nload.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y purge iptraf-ng"
               ],
               "status": "Active",
@@ -671,8 +671,8 @@
             {
               "id": "SW0207",
               "description": "Install hostname broadcast via mDNS (avahi-daemon)",
+              "prompt": "This operation will install avahi-daemon and add configuration files.\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will install avahi-daemon and add configuration files.\nDo you wish to continue?\" process_input",
                 "check_if_installed avahi-daemon",
                 "debconf-apt-progress -- apt-get -y install avahi-daemon libnss-mdns",
                 "cp /usr/share/doc/avahi-daemon/examples/sftp-ssh.service /etc/avahi/services/",
@@ -688,8 +688,8 @@
             {
               "id": "SW0208",
               "description": "Remove hostname broadcast via mDNS (avahi-daemon)",
+              "prompt": "This operation will purge avahi-daemon \nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will purge avahi-daemon \nDo you wish to continue?\" process_input",
                 "check_if_installed avahi-daemon",
                 "systemctl stop avahi-daemon avahi-daemon.socket",
                 "debconf-apt-progress -- apt-get -y purge avahi-daemon"
@@ -709,8 +709,8 @@
             {
               "id": "SW0301",
               "description": "Install tools for cloning and managing repositories (git)",
+              "prompt": "This operation will install git.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will install git.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y install git"
               ],
               "status": "Active",
@@ -722,8 +722,8 @@
             {
               "id": "SW0302",
               "description": "Remove tools for cloning and managing repositories (git)",
+              "prompt": "This operation will remove git.\n\nDo you wish to continue?",
               "command": [
-                "get_user_continue \"This operation will remove git.\n\nDo you wish to continue?\" process_input",
                 "debconf-apt-progress -- apt-get -y purge git"
               ],
               "status": "Active",
